--- a/app/views/admin/branch/index.html.erb
+++ b/app/views/admin/branch/index.html.erb
@@ -7,19 +7,15 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Status</th>
-      <th>Icon</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @teams.each do |team| %>
+    <% @branches.each do |branch| %>
       <tr>
-        <td><%= team.name %></td>
-        <td><%= team.description %></td>
-        <td><%= team.status %></td>
-        <td><%= team.icon %></td>
+        <td><%= branch.name %></td>
+        <td><%= branch.description %></td>
         <td><%= link_to 'Show', [:admin, team] if can? :read, Team %></td>
         <td><%= link_to 'Edit', edit_admin_team_path(team) if can? :update, Team %></td>
         <td><%= link_to 'Destroy', [:admin, team], method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy, Team %></td>
@@ -30,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Team', new_admin_team_path if can? :create, Team  %>
+<%= link_to 'New Team', new_admin_branch_path %>
