--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
           <tbody>
             <tr> <td> Usuário: <label class="ls-title-6"><%= @user.name %></label> </td> </tr>
             <tr> <td> Email: <label class="ls-title-6"><%= @user.email %></label> </td> </tr>
-            <tr> <td> Senha: <label class="ls-title-6"><%= @user.password %></label> </td> </tr>
+            <tr> <td> Role: <label class="ls-title-6"><%= @user.role.name %></label></td> </tr>
           </tbody>
         </table>
     </div>
