--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,6 +22,7 @@
   <label class="ls-label ">
     <%= submit_tag('Buscar', class: "ls-btn") %>
   </label>
+  <%= hidden_field_tag :per_page, params[:per_page] %>>
   <%end%>
 </div>
 
@@ -59,4 +60,8 @@
   </div>
   <% end %>
 </div>
+<% end %>
+
+<%= content_for :javascript do %>
+  $(document).ready(commit_crap.paginate.init);
 <% end %>
