--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -9,6 +9,9 @@
         <ul>
           <%= link_to 'Cadastro de Role', roles_path, class: "ls-ico-flag" if can? :manage, Role %>
         </ul>
+        <ul>
+          <%= link_to 'Cadastro de Repositórios', repositories_path, class: "ls-ico-flag" if can? :manage, Role %>
+        </ul>
       </li>
     </ul>
   </nav>
