--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,10 @@
   <label class="ls-label ">
     <%= submit_tag('Buscar', class: "ls-btn") %>
   </label>
-  <%= hidden_field_tag :per_page, params[:per_page] %>>
+  <%= hidden_field_tag :per_page,
+# puts 'Creating User Admin...'
+# User.create! :name => "admin", :email => "admin@admin.com", :password => "inicial1234"
+ params[:per_page] %>>
   <%end%>
 </div>
 
